[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-telegram-bot>=22.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "xlrd>=2.0.2",
]
